--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^43.3.0"
+        "@ckeditor/ckeditor5-build-classic": "^43.3.0",
+        "chart.js": "^4.4.6",
+        "laravel-echo": "^1.16.1",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
